# embytes-buffer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: cargo-publish.yml
examples/: reader.rs  stack_buffer.rs  std_example.rs  writer.rs
src/: json.rs  lib.rs  read.rs  write.rs
