[package]
name = "embytes-buffer"
description = "Crate for an embedded bytes buffer"
edition = "2021"
license = "Apache-2.0"

homepage = "https://github.com/siemtim-dev/embytes-buffer"
repository = "https://github.com/siemtim-dev/embytes-buffer.git"

version = "0.2.0"
publish = true

[dependencies]
defmt = { version = "0.3.10", optional = true }
embedded-io = { version = "0.6.1", optional = true }
serde = { version = "1.0.217", default-features = false, features = ["derive"], optional = true }
serde-json-core = { version = "0.6.0", default-features = false, features = ["defmt", "heapless"], optional = true }
thiserror = { version = "2.0.11", default-features = false }

[features]
default = [ "embedded", "std", "serde", "defmt" ]
std = []
serde = [
    "dep:serde",
    "dep:serde-json-core"
]
embedded = [ 
    "dep:embedded-io"
]
defmt = [
    "dep:defmt"
]

